# odk-central-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/odk_central_mcp/: __init__.py  server.py
